--- a/src/TradSim.EventAggregation.Service/project.json
+++ b/src/TradSim.EventAggregation.Service/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "userSecretsId": "aspnet-TradSim.EventAggregation.Service-2ef1e369-7328-4341-a22b-a6a28178dca7",
 
   "dependencies": {
@@ -40,10 +40,12 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc":  {
+    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": {
       "version": "1.0.0-preview2-final",
       "type": "build"
-    }
+    },
+    "test": "1.0.0",
+    "TradSim.EventAggregation": "1.0.0-*"
   },
 
   "tools": {
