--- a/src/TradSim.EventAggregation/project.json
+++ b/src/TradSim.EventAggregation/project.json
@@ -17,8 +17,7 @@
     "netstandard1.6": {
       "dependencies": {
         "NETStandard.Library":"1.6.0",
-        "Microsoft.FSharp.Core.netcore": "1.0.0-alpha-160629",
-        "Newtonsoft.Json": "9.0.1"
+        "Microsoft.FSharp.Core.netcore": "1.0.0-alpha-160629"
       }
     }
   }
