deserialized envelope and event, added newtonsoft

--- a/src/TradSim.EventAggregation.Service/project.json
+++ b/src/TradSim.EventAggregation.Service/project.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "RabbitMQ.Client": "4.0.0-rc-1",
+    "Newtonsoft.Json.NetCore": "9.0.2",
     "TradSim.EventAggregation": "1.0.0-*"
   }
 }
